@@ -1,3 +1,9 @@
+2006-01-26  Alan Modra  <amodra@bigpond.net.au>
+
+	PR middle-end/25176
+	* function.c (expand_function_end): Emit blockage for unwinder
+	after return label.
+
 2006-01-23  Steven Bosscher  <stevenb.gcc@gmail.com>
 	Jan Hubicka  <jh@suse.cz>
 	Richard Guenther  <rguenther@suse.de>
